# plcnext-io-drivers-cpp

./: .gitignore  LICENSE  README.md
examples/SimpleApplication/: .gitignore  CMakeLists.txt  CppProperties.json  PreLoad.cmake  README.md  arm.cmake  configChangeExample.cpp  failSafeTest.cpp  hartAIexample.cpp  hartAO4test.cpp  hartAoDiagTest.cpp  hartExample.cpp  hartFW102test.cpp  main.cpp  read_test.cpp  starterKit.cpp  substituteBehaviorExample.cpp  write_test.cpp  x64.cmake
examples/SimpleApplication/build64/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/VSCodeExample/: CMakeLists.txt  arm.cmake  main.cpp  x64.cmake
examples/VisualStudio2017_Example/: CppProperties.json  README.md  main.cpp
include/AXC2152/: AXC2152.h  AXCConfig.h  AXLChannel.h  AXLFunction.h  AXLInput.h  AXLModule.h  AXLOutput.h  AXLVariant.h
include/AXC2152/Modules/: AXLF_AI2AO2.h  AXLF_AI4_I.h  AXLF_AI4_U.h  AXLF_AI8.h  AXLF_AO4.h  AXLF_CNT.h  AXLF_DI16.h  AXLF_DI32.h  AXLF_DI64.h  AXLF_DI8.h  AXLF_DI8DO8.h  AXLF_DO16.h  AXLF_DO32.h  AXLF_DO64.h  AXLF_DO8.h  AXLF_RTD.h  AXLF_UTH.h
include/Axiobus/: AXLAnalogInput.h  AXLAnalogOutput.h  AXLChannel.h  AXLDigitalInput.h  AXLDigitalOutput.h  AXLDigitalOutputModule.h  AXLFunction.h  AXLInput.h  AXLModule.h  AXLOutput.h  AXLVariant.h  Axiobus.h  PDIResponseStatus.h
include/Axiobus/Modules/: AXLF_AI2AO2.h  AXLF_AI4_I.h  AXLF_AI4_U.h  AXLF_AI8.h  AXLF_AO4.h  AXLF_AO8.h  AXLF_DI16.h  AXLF_DI32.h  AXLF_DI64.h  AXLF_DI8.h  AXLF_DI8DO8.h  AXLF_DO16.h  AXLF_DO32.h  AXLF_DO64.h  AXLF_DO8.h  AXLF_RTD.h  AXLF_UTH.h
include/Hardware/: AxioDeviceConfiguration.hpp  AxioDrvAcc.h  AxioResult.hpp  AxioService.hpp  AxioServiceExecuter.hpp  PdiParam.hpp  PdiResult.hpp  SignalLamps.h  axio_xfer.h  ddi_macr.h  fibo_msg_codes.h  stdtypes.h  stdtypesx.h
lib/shared/arm/: libAxiobus.so.0  libAxiobus.so.0.1  libAxiobus.so.1  libAxiobus.so.1.0  libAxiobus.so.1.2  libAxiobus.so.2  libAxiobus.so.2.3  libAxiobus.so.3  libAxiobus.so.4  libAxiobus.so.5  libAxiobus.so.5.0  libAxiobus.so.6  libAxiobus.so.7.0  libAxiobus.so.7.1
lib/shared/x64/: libAxiobus.so.0  libAxiobus.so.0.1  libAxiobus.so.1  libAxiobus.so.1.2  (+10 more)
plcnext-io-driver-component/: README.md
(+23 files in other folders)
